force-app/main/default/objects/CareServiceLineItem__c/CareServiceLineItem__c.object-meta.xml
<CustomObject>
    <label>Care Service Line Item</label>
    <nameField>
        <displayFormat>CSLI-{0000000}</displayFormat>
        <label>Care Service Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Service Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>