force-app/main/default/objects/CareServiceLineItem__c/fields/AddedBy_RepairCenter__c.field-meta.xml
<CustomField>
    <fullName>AddedBy_RepairCenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added By Repair Center</label>
    <type>Checkbox</type>
</CustomField>