force-app/main/default/objects/CareServiceLineItem__c/fields/CareService__c.field-meta.xml
<CustomField>
    <fullName>CareService__c</fullName>
    <label>Care Service</label>
    <referenceTo>CareService__c</referenceTo>
    <relationshipName>CareService_LineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>