force-app/main/default/objects/CareServiceLineItem__c/fields/Commercial_Description__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Description__c</fullName>
    <label>Commercial Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>