force-app/main/default/objects/CareServiceLineItem__c/fields/Initial_Price__c.field-meta.xml
<CustomField>
    <fullName>Initial_Price__c</fullName>
    <label>Initial Price</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>