force-app/main/default/objects/CareServiceLineItem__c/fields/Instruction_Name__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Name__c</fullName>
    <label>Instruction Name</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>