force-app/main/default/objects/CareServiceLineItem__c/fields/Instruction_Name_ICONiCS__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Name_ICONiCS__c</fullName>
    <label>Repair Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>