force-app/main/default/objects/CareServiceLineItem__c/fields/InstructionCode__c.field-meta.xml
<CustomField>
    <fullName>InstructionCode__c</fullName>
    <label>Instruction Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>