force-app/main/default/objects/CareServiceLineItem__c/fields/NS_Code__c.field-meta.xml
<CustomField>
    <fullName>NS_Code__c</fullName>
    <label>NS Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>