force-app/main/default/objects/CareServiceLineItem__c/fields/NS_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>NS_Code_Description__c</fullName>
    <label>NS Code Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>