force-app/main/default/objects/CareServiceLineItem__c/fields/Updated_Price__c.field-meta.xml
<CustomField>
    <fullName>Updated_Price__c</fullName>
    <label>Updated Price</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>